public/css/style.css
/* ... */
.slider-row .left-image_wrapper,
.slider-row .right-image_wrapper {
  flex-basis: 50%;
  position: relative;
  overflow: hidden;
}

.slider-row .left-image_wrapper img,
.slider-row .right-image_wrapper img {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.slider-row .left-image_wrapper .controls {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  justify-content: space-between;
  align-items: center;
  display: none;
}

.controls .prev-button,
.controls .next-button {
  width: fit-content;
  height: fit-content;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  position: relative;
  z-index: 1;
  border: none;
  background-color: transparent;
  cursor: pointer;
  transition: transform 0.2s ease, filter .5s ease;
}

.controls .prev-button:hover,
.controls .next-button:hover {
  filter: invert(0.3);
}

.controls .prev-button:focus-visible,
.controls .next-button:focus-visible {
  border: 1px solid var(--fc-white-100);
  outline: none;
  border-radius: 5px;
}

.controls button:disabled {
  cursor: not-allowed;
}

.controls button:disabled:hover {
  filter: invert(0);
}

.controls button:active,
.menu:active,
.send-message:active,
.info-button:active {
  transform: scale(0.85);
}

.controls .prev-button img,
.controls .next-button img {
  width: 3rem;
  height: 3rem;
  position: relative;
}

.controls .prev-button img {
  rotate: 180deg;
}

.controls .next-button img {
  margin: 0 0 0 auto;
}

@keyframes slide-left {
  0% {
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
  }

  100% {
    clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%);
  }
}

/* Mouse controls */
.mouse-controls {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  display: flex;
  z-index: 3;
}

.mouse-controls .prev-control,
.mouse-controls .next-control {
  flex-basis: 50%;
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

.mouse-controls .mouse-controls_arrow {
  position: absolute;
  transform: translate(-100%, -100%);
  width: 3rem !important;
  height: 3rem !important;
  pointer-events: none;
  will-change: transform;
}

/* Footer */
.c-footer {
  width: 100%;
  background-color: var(--fc-white-100);
  padding: var(--gutter-width);
  position: sticky;
  bottom: 0;
  z-index: -1;
}

.c-footer .top-wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
}

.top-wrapper .footer-wrapper {
  text-wrap: nowrap;
}

.c-footer .nav-item_link::before {
  z-index: 1;
}

.c-footer h2,
.c-footer span,
.c-footer a,
.c-footer p {
  color: var(--fc-black) !important;
}

.middle-wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
  width: 100%;
  margin: calc(124/16 * 1rem) 0 calc(214/16 * 1rem);
}

.middle-wrapper .wrapper-heading,
.middle-wrapper .wrapper-link {
  font-size: clamp(2.25rem, 2.0526rem + 1.0526vw, 3rem);
  grid-column: span 4 / span 4;
  color: var(--fc-black);
  text-decoration: none;
}

.middle-wrapper .wrapper-link {
  width: fit-content;
  position: relative;
}

.middle-wrapper .wrapper-link::before {
  position: absolute;
  content: "";
  bottom: 0;
  width: 100%;
  height: 2px;
  background: var(--fc-black);
  transform: scaleX(0);
  transform-origin: right;
  transition: transform var(--animation-primary);
}


.middle-wrapper .wrapper-link:hover::before,
.middle-wrapper .wrapper-link:focus-visible::before {
  transform: scaleX(1);
  transform-origin: left;
}

.middle-wrapper .wrapper-link:hover,
.middle-wrapper .wrapper-link:focus-visible {
  outline: none;
  border: none;
}

.bottom-wrapper {
  display: grid;
  grid-template-columns: repeat(12, minmax(0, 1fr));
  gap: var(--gutter-width);
}

.bottom-wrapper .footer-author {
  grid-column: 9 / span 3;
}

.bottom-wrapper .footer-copyright {
  margin: 0 0 0 auto;
  text-wrap: nowrap;
}

/* Responsive Design */
@media (max-width: 797px) {

  .info-send_message:hover {
    background-color: var(--fc-white-100);
  }

  .right-content p {
    display: none;
  }

  .modal-footer {
    gap: .5rem;
  }

  .modal-footer .left-content {
    align-items: flex-start;
    row-gap: 2rem;
  }

  .left-content .services {
    flex-basis: 48%;
    flex-direction: column-reverse;
    gap: 1rem;
  }

  .services .services-heading {
    padding: 0;
    background-color: transparent;
    color: hsla(0, 0%, 100%, 0.4);
  }

  .left-content {
    justify-content: space-between;
    width: 100%;
  }

  .left-content .services {
    flex-basis: 30%;
  }

  .c-main {
    clip-path: unset;
  }

  .projects-item .projects-item_description,
  .projects-item.slider .projects-item_description {
    top: var(--gutter-width);
  }

  .mouse-controls {
    display: none;
  }

  .slider-row .left-image_wrapper .controls {
    display: flex;
  }

  .projects-item .projects-item_description[data-first-description] {
    margin-top: 0vh;
  }
}

@media (max-width: 747px) {

  .c-contact_container .menu,
  .c-contact_container .send-message {
    width: fit-content;
  }
}
/* ... */

